--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="container">
     <div class="card" id="introduction">
-      <h1>Hello, I'm Sarah 😎</h1>
+      <h1>Hello, I'm Sarah 😎✌️</h1>
       <img src="../images/Sarah Pelham Headshot Square.jpg" width="100px" alt="Sarah Pelham" class="img-circle">
       <p>I love penguins 🐧</p>
         <a class="btn-blue" href="#">Discover Penguins</a>
